--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(5, 1, 1);  ax2 = fig.add_subplot(5, 1, 2);  ax3 = fig.add_subplot(5, 1, 3)\n",
     "ax4 = fig.add_subplot(5, 1, 4);  ax5 = fig.add_subplot(5, 1, 5)\n",
     "\n",
@@ -194,8 +194,7 @@
     "ax5.set_ylabel('Date-Time')\n",
     "ax5.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF PSSR2-Rich (SID-22)]  ' + data_name\n",
-    "ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR2-Rich (SID-22)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# xlim=[-.5, len(np.ravel(data.auto_corr))     -.5];  print(xlim);  ax1.set_xlim(xlim)\n",
@@ -256,7 +255,7 @@
     "ax18.plot(data.frequency[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.frequency[n_sweep][0]))\n",
     "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.frequency[n_sweep][1]))\n",
@@ -327,7 +326,7 @@
     "ax18.plot(data.frequency[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.frequency[n_sweep][0]))\n",
     "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.frequency[n_sweep][1]))\n",
@@ -399,7 +398,7 @@
     "ax18.plot(data.frequency[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.frequency[n_sweep][0]))\n",
     "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.frequency[n_sweep][1]))\n",
@@ -452,6 +451,7 @@
     "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(2, 1, 1);   ax2 = fig2d.add_subplot(2, 1, 2); \n",
     "ax1.set_yscale('log');              ax2.set_yscale('log')\n",
+    "ax1.set_title(\"[\" + data_name + \"]\")\n",
     "\n",
     "p1 = ax1.pcolormesh(num_x, num_y, E_i_2d, cmap='bwr');  pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
     "p2 = ax2.pcolormesh(num_x, num_y, E_q_2d, cmap='bwr');  pp2 = fig2d.colorbar(p1, ax=ax2, orientation=\"vertical\")\n",
@@ -480,7 +480,7 @@
     "\n",
     "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1); \n",
-    "\n",
+    "ax1.set_title(\"[\" + data_name + \"]\")",
     "p1 = ax1.pcolormesh(num_x, num_y, auto_corr_2d, cmap='bwr')\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
     "\n",
