--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -318,7 +318,7 @@
     "    ax2.set_ylabel('Eu');  ax3.set_ylabel('Ev');  ax4.set_ylabel('Ew')\n",
     "    ax4.set_xlabel('Time (sec)')\n",
     "    #\n",
-    "    title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
+    "    title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]\\n' + data_name + \"\\n[\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "    ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);  ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "    # range: X-axis\n",
@@ -422,7 +422,7 @@
     "\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);  ax2.set_ylabel('Ev '+wave.str_unit);    ax3.set_ylabel('Ew '+wave.str_unit);  \n",
     "ax4.set_ylabel('Time [sec]');    ax5.set_ylabel('f_center [kHz]');  ax6.set_xlabel(str_date)\n",
-    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -467,7 +467,7 @@
     "ax4.plot(np.ravel(data.time[n_sweep][0:n_block]), linewidth=.5, label='time')\n",
     "\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);  ax2.set_ylabel('Ev '+wave.str_unit);  ax3.set_ylabel('Ew '+wave.str_unit);  ax4.set_ylabel('Time [sec]')\n",
-    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]\\n' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S');  ax4.set_xlabel(date)\n",
@@ -512,7 +512,7 @@
     "ax3.plot(data.time[n_sweep][n_block], wave.Ew_i[n_sweep][n_block], '-b', linewidth=.5, label='Ew_i'); \n",
     "ax3.plot(data.time[n_sweep][n_block], wave.Ew_q[n_sweep][n_block], '-r', linewidth=.5, label='Ew_q')\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);  ax2.set_ylabel('Ev '+wave.str_unit);  ax3.set_ylabel('Ew '+wave.str_unit)\n",
-    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]\\n' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8)\n",
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax3.set_xlabel(date)\n",
     "\n",
@@ -622,7 +622,7 @@
     "wave.EE = wave.Eu_i*wave.Eu_i + wave.Eu_q*wave.Eu_q # + wave.Ev_i*wave.Ev_i + wave.Ev_q*wave.Ev_q + wave.Ew_i*wave.Ew_i + wave.Ew_q*wave.Ew_q\n",
     "ax1.plot(data.time[n_sweep][n_block], wave.EE[n_sweep][n_block], '-b', linewidth=.5, label='EE')\n",
     "ax1.set_ylabel('EE ' +spec.str_unit)\n",
-    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]\\n' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax1.set_yscale('log')\n",
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax1.set_xlabel(date)\n",
@@ -726,7 +726,7 @@
     "ax1.set_yscale('log'); ax4.set_yscale('log');  ax5.set_yscale('log');  ax6.set_yscale('log')\n",
     "ax1.legend(loc='upper right', fontsize=8);  \n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
-    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S'); title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
+    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S'); title_date = \"[\" + data_name + \"]\\n\" + date1;  ax1.set_title(title_date)\n",
     "\n",
     "ylim=[10**(p_min), 10**(p_max)]; ax1.set_ylim(ylim); ax4.set_ylim(ylim);  ax5.set_ylim(ylim); ax6.set_ylim(ylim)\n",
     "\n",
@@ -780,7 +780,7 @@
     "ax1.set_yscale('log'); ax4.set_yscale('log');  ax5.set_yscale('log');  ax6.set_yscale('log')\n",
     "ax1.legend(loc='upper right', fontsize=8);  \n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
-    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Mid: %Y/%m/%d %R:%S'); title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
+    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Mid: %Y/%m/%d %R:%S'); title_date = \"[\" + data_name + \"]\\n\" + date1;  ax1.set_title(title_date)\n",
     "\n",
     "ylim=[10**(p_min), 10**(p_max)]; ax1.set_ylim(ylim); ax4.set_ylim(ylim);  ax5.set_ylim(ylim); ax6.set_ylim(ylim)\n",
     "\n",
@@ -836,7 +836,7 @@
     "ax1.set_yscale('log'); ax4.set_yscale('log');  ax5.set_yscale('log');  ax6.set_yscale('log')\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
-    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Last: %Y/%m/%d %R:%S'); title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
+    "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Last: %Y/%m/%d %R:%S'); title_date = \"[\" + data_name + \"]\\n\" + date1;  ax1.set_title(title_date)\n",
     "\n",
     "ylim=[10**(p_min), 10**(p_max)]; ax1.set_ylim(ylim); ax4.set_ylim(ylim);  ax5.set_ylim(ylim); ax6.set_ylim(ylim)\n",
     "\n",
@@ -1057,7 +1057,7 @@
     "ax1.set_ylabel('EE autocorr');  ax2.set_ylabel('EuEu autocorr'); ax3.set_ylabel('EvEv autocorr'); ax4.set_ylabel('EwEw autocorr'); ax4.set_xlabel('Time [sec]')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax1.set_title(title_date)\n",
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8);  \n",
     "ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);   ax4.legend(loc='upper right', fontsize=8)\n",
@@ -1109,7 +1109,7 @@
     "ax1.set_ylabel('EE autocorr');  ax2.set_ylabel('EuEu autocorr'); ax3.set_ylabel('EvEv autocorr'); ax4.set_ylabel('EwEw autocorr'); ax4.set_xlabel('Time [sec]')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Mid: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax1.set_title(title_date)\n",
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8);  \n",
     "ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);   ax4.legend(loc='upper right', fontsize=8)\n",
@@ -1159,7 +1159,7 @@
     "ax1.set_ylabel('EE autocorr');  ax2.set_ylabel('EuEu autocorr'); ax3.set_ylabel('EvEv autocorr'); ax4.set_ylabel('EwEw autocorr'); ax4.set_xlabel('Time [sec]')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Last: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax1.set_title(title_date)\n",
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8);  \n",
     "ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);   ax4.legend(loc='upper right', fontsize=8)\n",
