--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# *** Dump ***\n",
-    "dump_mode = 2                           # 0: no-dump  1:plot dump\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
     "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax7 = fig.add_subplot(4, 1, 2);  ax8 = fig.add_subplot(4, 1, 3);  ax9 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "ax1.plot(np.ravel(spec.EE),             '-r', linewidth=1.2, label='EE')\n",
@@ -326,7 +326,7 @@
     "ax1.set_ylabel(spec.str_unit)\n",
     "ax7.set_ylabel('frequency [kHz]');    ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time');  ax9.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF PSSR1-Surv (SID-5)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR1-Surv (SID-5)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);     ax7.legend(loc='upper right', fontsize=8); ax8.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[-.5, len(np.ravel(data.EE))   -.5]; print(xlim); ax1.set_xlim(xlim); ax7.set_xlim(xlim)\n",
@@ -348,7 +348,7 @@
    "outputs": [],
    "source": [
     "n_time = n_time1//2\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(2, 1, 1);  ax7 = fig.add_subplot(2, 1, 2)\n",
     "\n",
     "ax1.plot(spec.EE[n_time],            '-r', linewidth=1.2, label='EE')\n",
@@ -360,7 +360,7 @@
     "ax1.set_ylabel(spec.str_unit)\n",
     "ax7.set_ylabel('frequency [kHz]');    ax7.set_xlabel(data.epoch[n_time].strftime('%Y/%m/%d %R:%S') + '  [in ' + str_date + ']')\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF PSSR1-Rich (SID-21)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR1-Surv (SID-5)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);      ax7.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[0, n_freq0];  ax1.set_xlim(xlim); ax7.set_xlim(xlim)\n",
@@ -408,35 +408,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c0ac766",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Epoch_1d      = data.epoch.tolist()\n",
-    "freq_1d       = data.frequency[0].tolist()\n",
-    "freq1         = freq_1d[0:N_frequency]\n",
-    "freq_width_1d = data.freq_width[0].tolist()\n",
-    "freq_width1   = freq_width_1d[0:N_frequency]\n",
-    "\n",
-    "EE_2d = data.EE.transpose()\n",
-    "# EE_power1 = data.EE[0][0:N_frequency]\n",
-    "# EE_power2 = data.EE[n_time0][0:N_frequency]\n",
-    "#\n",
-    "freq_width_2d = data.freq_width.transpose()\n",
-    "if band_mode == 1:\n",
-    "    EE_2d = EE_2d / freq_width_2d / 1000 * data.subdiv_reduction[0]\n",
-    "    # EE_power1 = EE_power1 / freq_width1 / 1000 * data.subdiv_reduction[0]\n",
-    "    # EE_power2 = EE_power2 / freq_width1 / 1000 * data.subdiv_reduction[0]\n",
-    "f_min0 = freq_1d[0]\n",
-    "f_max0 = freq_1d[N_frequency-1]\n",
-    "# power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "eab6e00c",
    "metadata": {},
    "outputs": [],
@@ -445,7 +416,7 @@
     "p_min = p_min0;  p_max = p_max0\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(1, 1, 1)\n",
     "\n",
     "ax1.plot(freq_1d, EE_med,      '-y',  linewidth=3.0, label='med')\n",
@@ -461,7 +432,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[f_min, f_max];  ax1.set_xlim(xlim)\n",
@@ -506,7 +477,7 @@
     "ax1.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EE')\n",
+    "ax1.set_title(\"[\" + data_name + \"]\\n\" + 'EE')\n",
     "ax1.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
