--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2025/7/5"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2025/7/6"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# *** Dump ***\n",
-    "dump_mode = 2                           # 0: no-dump  1:plot dump\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
     "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax1 = fig.add_subplot(9, 1, 1);  ax2 = fig.add_subplot(9, 1, 2);  ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4);  ax5 = fig.add_subplot(9, 1, 5)\n",
     "    ax6 = fig.add_subplot(9, 1, 6);  ax7 = fig.add_subplot(9, 1, 7);  ax8 = fig.add_subplot(9, 1, 8);  ax9 = fig.add_subplot(9, 1, 9)\n",
@@ -410,7 +410,7 @@
     "    ax5.set_ylabel('Deg. Cir Pol.');  ax6.set_ylabel('Lin Deg.'); \n",
     "ax7.set_ylabel('frequency [kHz]');    ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time');  ax9.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF PSSR1-Rich (SID-21)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR1-Rich (SID-21)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);     ax7.legend(loc='upper right', fontsize=8); ax8.legend(loc='upper right', fontsize=8)\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
@@ -442,7 +442,7 @@
    "outputs": [],
    "source": [
     "n_time = n_time1//2\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax1 = fig.add_subplot(7, 1, 1);  ax2 = fig.add_subplot(7, 1, 2);  ax3 = fig.add_subplot(7, 1, 3);  ax4 = fig.add_subplot(7, 1, 4)\n",
     "    ax5 = fig.add_subplot(7, 1, 5);  ax6 = fig.add_subplot(7, 1, 6);  ax7 = fig.add_subplot(7, 1, 7)\n",
@@ -482,7 +482,7 @@
     "    ax5.set_ylabel('Deg. Cir Pol.');  ax6.set_ylabel('Lin Deg.')\n",
     "ax7.set_ylabel('frequency [kHz]');    ax7.set_xlabel(data.epoch[n_time].strftime('%Y/%m/%d %R:%S') + '  [in ' + str_date + ']')\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF PSSR1-Rich (SID-21)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR1-Rich (SID-21)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);      ax7.legend(loc='upper right', fontsize=8)\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8); \n",
@@ -564,43 +564,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c0ac766",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Epoch_1d       = data.epoch.tolist()\n",
-    "freq_1d        = data.frequency[0].tolist()\n",
-    "freq1          = freq_1d[0:N_frequency]\n",
-    "freq_width_1d  = data.freq_width[0].tolist()\n",
-    "freq_width1    = freq_width_1d[0:N_frequency]\n",
-    "\n",
-    "EuEu_2d = data.EuEu.transpose()\n",
-    "EvEv_2d = data.EvEv.transpose()\n",
-    "EwEw_2d = data.EwEw.transpose()\n",
-    "E_DoLuv_2d = data.E_DoLuv.transpose()\n",
-    "E_DoLvw_2d = data.E_DoLvw.transpose()\n",
-    "E_DoLwu_2d = data.E_DoLwu.transpose()\n",
-    "E_DoCuv_2d = data.E_DoCuv.transpose()\n",
-    "E_DoCvw_2d = data.E_DoCvw.transpose()\n",
-    "E_DoCwu_2d = data.E_DoCwu.transpose()\n",
-    "E_ANGuv_2d = data.E_ANGuv.transpose()\n",
-    "E_ANGvw_2d = data.E_ANGvw.transpose()\n",
-    "E_ANGwu_2d = data.E_ANGwu.transpose()\n",
-    "freq_width_2d  = data.freq_width.transpose()\n",
-    "if band_mode == 1:\n",
-    "    EuEu_2d = EuEu_2d / freq_width_2d / 1000\n",
-    "    EvEv_2d = EvEv_2d / freq_width_2d / 1000\n",
-    "    EwEw_2d = EwEw_2d / freq_width_2d / 1000\n",
-    "#\n",
-    "f_min0 = freq_1d[0]\n",
-    "f_max0 = freq_1d[N_frequency-1]\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3517a7dc",
    "metadata": {},
    "outputs": [],
@@ -609,7 +572,7 @@
     "p_min = p_min0;  p_max = p_max0\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "else:\n",
@@ -669,7 +632,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "if comp_mode > 0:\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); ax4.legend(loc='upper right', fontsize=8) \n",
@@ -702,19 +665,19 @@
     "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
-    "ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=2.0, label='EuEu_med')\n",
-    "ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=2.0, label='EvEv_med')\n",
-    "ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=2.0, label='EwEw_med')\n",
+    "fig = plt.figure(figsize=(16, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
+    "#ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=2.0, label='EuEu_med')\n",
+    "#ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=2.0, label='EvEv_med')\n",
+    "#ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=2.0, label='EwEw_med')\n",
     "ax1.plot(freq_1d, spec.EuEu[n0], ':r',  linewidth=1.0, label='uu init')\n",
     "ax1.plot(freq_1d, spec.EvEv[n0], ':g',  linewidth=0.8, label='vv init')\n",
     "ax1.plot(freq_1d, spec.EwEw[n0], ':b',  linewidth=0.6, label='ww init')\n",
-    "ax1.plot(freq_1d, spec.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
-    "ax1.plot(freq_1d, spec.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
-    "ax1.plot(freq_1d, spec.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
-    "ax1.plot(freq_1d, spec.EuEu[n2], '_r',  linewidth=1.0, label='uu end')\n",
-    "ax1.plot(freq_1d, spec.EvEv[n2], '_g',  linewidth=0.8, label='vv end')\n",
-    "ax1.plot(freq_1d, spec.EwEw[n2], '_b',  linewidth=0.6, label='ww end')\n",
+    "#ax1.plot(freq_1d, spec.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
+    "#ax1.plot(freq_1d, spec.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
+    "#ax1.plot(freq_1d, spec.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
+    "#ax1.plot(freq_1d, spec.EuEu[n2], '_r',  linewidth=1.0, label='uu end')\n",
+    "#ax1.plot(freq_1d, spec.EvEv[n2], '_g',  linewidth=0.8, label='vv end')\n",
+    "#ax1.plot(freq_1d, spec.EwEw[n2], '_b',  linewidth=0.6, label='ww end')\n",
     "ax1.set_yscale('log')\n",
     "if f_mode == 1:\n",
     "    ax1.set_xscale('log')\n",
@@ -723,7 +686,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[f_min, f_max]\n",
@@ -815,6 +778,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "05b24e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EuEu_2d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +796,7 @@
     "# Z-range\n",
     "p_min = p_min0;      p_max = p_max0\n",
     "\n",
-    "fig2d = plt.figure(figsize=[16,11])\n",
+    "fig2d = plt.figure(figsize=[16,11], dpi=400)\n",
     "ax1 = fig2d.add_subplot(2, 1, 1)\n",
     "ax2 = fig2d.add_subplot(2, 1, 2)\n",
     "\n",
@@ -833,7 +806,7 @@
     "    ax1.set_yscale('log');         ax2.set_yscale('log')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title(\"[\" + data_name + \"]  \")\n",
+    "ax1.set_title(\"[\" + data_name + \"]\")\n",
     "if   data.U_selected[0]==1 and data.V_selected[0]==1:\n",
     "    ax1.set_ylabel('EuEu [kHz]'); ax2.set_ylabel('EvEv [kHz]')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
@@ -888,17 +861,17 @@
     "\n",
     "# X-axis\n",
     "if   data.U_selected[0]==1 and data.V_selected[0]==1:\n",
-    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv'); ax2.set_title('Deg. Cir. uv');     ax3.set_title('Ang. uv');\n",
+    "    ax1.set_title(\"[\" + data_name + \"]\\n\" + 'Deg. Lin. uv'); ax2.set_title('Deg. Cir. uv');     ax3.set_title('Ang. uv');\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "elif data.V_selected[0]==1 and data.W_selected[0]==1:\n",
-    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. vw'); ax2.set_title('Deg. Cir. vw');     ax3.set_title('Ang. vw');  \n",
+    "    ax1.set_title(\"[\" + data_name + \"]\\n\" + 'Deg. Lin. vw'); ax2.set_title('Deg. Cir. vw');     ax3.set_title('Ang. vw');  \n",
     "    p2 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "    p5 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p8 = ax3.pcolormesh(Epoch_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "else:\n",
-    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. wu'); ax2.set_title('Deg. Cir. wu');     ax3.set_title('Ang. wu')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]\\n\" + 'Deg. Lin. wu'); ax2.set_title('Deg. Cir. wu');     ax3.set_title('Ang. wu')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
@@ -929,9 +902,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EuEu_c = juice_math.clean_rfi(np.ravel(data.EuEu), 17)\n",
-    "EvEv_c = juice_math.clean_rfi(np.ravel(data.EvEv), 17)\n",
-    "EwEw_c = juice_math.clean_rfi(np.ravel(data.EwEw), 17)\n",
+    "EuEu_c = juice_math.clean_rfi(np.ravel(spec.EuEu), 17)\n",
+    "EvEv_c = juice_math.clean_rfi(np.ravel(spec.EvEv), 17)\n",
+    "EwEw_c = juice_math.clean_rfi(np.ravel(spec.EwEw), 17)\n",
     "EuEu_c = EuEu_c.reshape(n_time1, n_freq1)\n",
     "EvEv_c = EvEv_c.reshape(n_time1, n_freq1)\n",
     "EwEw_c = EwEw_c.reshape(n_time1, n_freq1)\n",
@@ -962,19 +935,19 @@
     "# Y-range\n",
     "p_min0 = p_min;  p_max0 = p_max\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(2, 1, 1)\n",
     "ax2 = fig.add_subplot(2, 1, 2)\n",
     "\n",
-    "ax1.plot(freq_1d, data.EuEu[n0], ':r', linewidth=1.0, label='uu init')\n",
-    "ax1.plot(freq_1d, data.EvEv[n0], ':g', linewidth=0.8, label='vv init')\n",
-    "ax1.plot(freq_1d, data.EwEw[n0], ':b', linewidth=0.6, label='ww init')\n",
-    "ax1.plot(freq_1d, data.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
-    "ax1.plot(freq_1d, data.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
-    "ax1.plot(freq_1d, data.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
-    "ax1.plot(freq_1d, data.EuEu[n2], '-r', linewidth=1.0, label='uu end')\n",
-    "ax1.plot(freq_1d, data.EvEv[n2], '-g', linewidth=0.8, label='vv end')\n",
-    "ax1.plot(freq_1d, data.EwEw[n2], '-b', linewidth=0.6, label='ww end')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n0], ':r', linewidth=1.0, label='uu init')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n0], ':g', linewidth=0.8, label='vv init')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n0], ':b', linewidth=0.6, label='ww init')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n2], '-r', linewidth=1.0, label='uu end')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n2], '-g', linewidth=0.8, label='vv end')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n2], '-b', linewidth=0.6, label='ww end')\n",
     "ax2.plot(freq_1d, EuEu_c[n0], ':r', linewidth=1.0, label='uu init cleaned')\n",
     "ax2.plot(freq_1d, EvEv_c[n0], ':g', linewidth=0.8, label='vv init cleaned')\n",
     "ax2.plot(freq_1d, EwEw_c[n0], ':b', linewidth=0.6, label='ww init cleaned')\n",
@@ -995,15 +968,14 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
-    "ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
     "xlim=[f_min0, f_max0];         ax1.set_xlim(xlim); ax2.set_xlim(xlim);\n",
-    "xlim=[1500, 1700];         ax1.set_xlim(xlim); ax2.set_xlim(xlim);\n",
+    "# xlim=[1500, 1700];         ax1.set_xlim(xlim); ax2.set_xlim(xlim);\n",
     "# range: Y-axis\n",
-    "ylim=[10**p_min0, 10**p_max0]; ax1.set_ylim(ylim); ax2.set_ylim(ylim)\n",
+    "# ylim=[10**p_min0, 10**p_max0]; ax1.set_ylim(ylim); ax2.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
@@ -1044,15 +1016,15 @@
     "\n",
     "# X-axis\n",
     "if   data.U_selected[0]==1 and data.V_selected[0]==1:\n",
-    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu cleaned'); ax2.set_title('EvEv cleaned')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]\\n\" + 'EuEu cleaned'); ax2.set_title('EvEv cleaned')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "elif data.V_selected[0]==1 and data.W_selected[0]==1:\n",
-    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'EvEv cleaned'); ax2.set_title('EwEw cleaned')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]\\n\" + 'EvEv cleaned'); ax2.set_title('EwEw cleaned')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EvEv_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EwEw_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "else:\n",
-    "    ax2.set_title(\"[\" + data_name + \"]  \" + 'EwEw cleaned'); ax3.set_title('EuEu cleaned')\n",
+    "    ax2.set_title(\"[\" + data_name + \"]\\n\" + 'EwEw cleaned'); ax3.set_title('EuEu cleaned')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EwEw_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EuEu_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "ax2.set_xlabel(str_date)\n",
