--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/4/10"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/7/6"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# *** Plot dump ***\n",
-    "dump_mode = 2                           # 0: no-dump  1:plot dump  2:comparison for operation\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump  2:comparison for operation\n",
     "# *** CAL ***\n",
     "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(6, 1, 1);  ax2 = fig.add_subplot(6, 1, 2);  ax3 = fig.add_subplot(6, 1, 3)\n",
     "ax4 = fig.add_subplot(6, 1, 4);  ax5 = fig.add_subplot(6, 1, 5);  ax6 = fig.add_subplot(6, 1, 6)\n",
     "\n",
@@ -274,7 +274,7 @@
     "\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);     ax2.set_ylabel('Ev '+wave.str_unit);  ax3.set_ylabel('Ew '+wave.str_unit);  \n",
     "ax4.set_ylabel('Frequency [kHz]');  ax5.set_ylabel('T [degC]');      ax6.set_xlabel(str_date)\n",
-    "title_label = '[JUICE/RPWI HF RAW (SID-2)]  ' + data_name;           ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF RAW (SID-2)]\\n' + data_name;           ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -309,7 +309,7 @@
     "num_sweep = 3;  n_sweep0 = 0;  n_sweep1 = n_sweep0 + num_sweep;  print(\"[specific sweep]  SWEEP:\", n_sweep0, n_sweep1, \"in total of\", n_time0)\n",
     "f_min = f_min1;  f_max = f_max1\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(5, 1, 1);  ax2 = fig.add_subplot(5, 1, 2);  ax3 = fig.add_subplot(5, 1, 3);  ax4 = fig.add_subplot(5, 1, 4);  ax5 = fig.add_subplot(5, 1, 5)\n",
     "\n",
     "ax1.plot(np.ravel(wave.Eu_i[n_sweep0:n_sweep1]), '-r', linewidth=.5, label='Eu_i');  ax1.plot(np.ravel(wave.Eu_q[n_sweep0:n_sweep1]), ':g', linewidth=.5, label='Eu_q')\n",
@@ -322,7 +322,7 @@
     "\n",
     "date1 = data.epoch[n_sweep0];  date1 = date1.strftime('%Y/%m/%d %R:%S');  ax5.set_xlabel(date1)\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);  ax2.set_ylabel('Ev '+wave.str_unit);  ax3.set_ylabel('Ew '+wave.str_unit);  ax4.set_ylabel('Frequency [kHz]');  \n",
-    "title_label = '[JUICE/RPWI HF RAW (SID-2)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF RAW (SID-2)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -354,7 +354,7 @@
    "outputs": [],
    "source": [
     "num_step = 3;  n_sweep = n_time0//2;  n_step0 = 5;  n_step1 = n_step0 + num_step;  print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0,  \"[Steps]\", n_step0, \"-\", n_step1)\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "ax1.plot(np.ravel(wave.Eu_i[n_sweep][n_step0:n_step1]), '-r', linewidth=.5, label='Eu_i');  ax1.plot(np.ravel(wave.Eu_q[n_sweep][n_step0:n_step1]), ':g', linewidth=.5, label='Eu_q')\n",
@@ -364,7 +364,7 @@
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('%Y/%m/%d %R:%S');  ax4.set_xlabel(date1)\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);  ax2.set_ylabel('Ev '+wave.str_unit);  ax3.set_ylabel('Ew '+wave.str_unit);  ax4.set_ylabel('Frequency [kHz]');  \n",
-    "title_label = '[JUICE/RPWI HF RAW (SID-2)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF RAW (SID-2)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -566,7 +566,7 @@
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 2);  ax3 = fig.add_subplot(3, 1, 3)\n",
     "\n",
     "ax1.plot(freq_1d, spec.EuEu[n_sweep1], '-r', linewidth=.9, label='EuEu 1st')\n",
@@ -617,7 +617,7 @@
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 80;     f_max = 2068\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
+    "fig = plt.figure(figsize=(16, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
     "# ax1.plot(freq_1d, EE_med  ,      '-y',  linewidth=4.0, label='EE_med')\n",
     "ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=2.0, label='EuEu_med')\n",
     "ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=2.0, label='EvEv_med')\n",
@@ -639,7 +639,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[f_min, f_max]\n",
@@ -666,7 +666,7 @@
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = 0;       f_max = 5000\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(9, 1, 1);  ax2 = fig.add_subplot(9, 1, 2);  ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4)\n",
     "ax5 = fig.add_subplot(9, 1, 5);  ax6 = fig.add_subplot(9, 1, 6);  ax7 = fig.add_subplot(9, 1, 7);  ax8 = fig.add_subplot(9, 1, 8);  ax9 = fig.add_subplot(9, 1, 9)\n",
     "\n",
@@ -699,8 +699,7 @@
     "date1 = Epoch_1d[n_sweep1];  date1 = date1.strftime(f'1st {n_sweep1}: %Y/%m/%d %R:%S ')\n",
     "date2 = Epoch_1d[n_sweep2];  date2 = date2.strftime(f'Mid {n_sweep2}: %Y/%m/%d %R:%S ')\n",
     "date3 = Epoch_1d[n_sweep3];  date3 = date3.strftime(f'Fin {n_sweep3}: %Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
-    "ax1.set_title(title_date)\n",
+    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);  ax6.legend(loc='upper right', fontsize=8)\n",
@@ -813,7 +812,7 @@
     "    ax6.set_yscale('log');    ax7.set_yscale('log');        ax8.set_yscale('log');        ax9.set_yscale('log')\n",
     "ax1.set_ylabel('Lin. uv');    ax2.set_ylabel('Lin. vw');    ax3.set_ylabel('Lin. wu');    ax4.set_ylabel('Cir. uv');    ax5.set_ylabel('Cir. vw');  \n",
     "ax6.set_ylabel('Cir. wu');    ax7.set_ylabel('Ang uv');     ax8.set_ylabel('Ang vw');     ax9.set_ylabel('Ang wu')\n",
-    "ax1.set_title(\"[\" + data_name + \"]  \");     \n",
+    "ax1.set_title(\"[\" + data_name + \"]\");     \n",
     "if time_mode == 1:\n",
     "    ax10.set_xlabel(str_date)\n",
     "else:\n",
@@ -936,7 +935,7 @@
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 2);  ax3 = fig.add_subplot(3, 1, 3)\n",
     "ax1.plot(freq_1d_msk, spec_msk.EuEu[n_sweep1], '-r', linewidth=.9, label='EuEu 1st')\n",
     "ax1.plot(freq_1d_msk, spec_msk.EuEu[n_sweep2], '-g', linewidth=.4, label='EuEu mid')\n",
@@ -987,7 +986,7 @@
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = 0;       f_max = 5000\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(9, 1, 1);  ax2 = fig.add_subplot(9, 1, 2);  ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4)\n",
     "ax5 = fig.add_subplot(9, 1, 5);  ax6 = fig.add_subplot(9, 1, 6);  ax7 = fig.add_subplot(9, 1, 7);  ax8 = fig.add_subplot(9, 1, 8);  ax9 = fig.add_subplot(9, 1, 9)\n",
     "\n",
@@ -1052,8 +1051,7 @@
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  \n",
     "\n",
-    "# fig = plt.figure(figsize=(14, 11))\n",
-    "fig = plt.figure(figsize=(8, 6))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(1, 1, 1)\n",
     "#ax1.plot(freq_1d,     EuEu_med, ':r', linewidth=1, label='EuEu ave')\n",
     "#ax1.plot(freq_1d,     EvEv_med, ':g', linewidth=1, label='EvEv ave')\n",
@@ -1066,7 +1064,7 @@
     "if f_mode == 1:\n",
     "    ax1.set_xscale('log')\n",
     "ax1.set_ylabel('EE '+spec.str_unit);  ax1.set_xlabel('Frequency [kHz]');  ax1.legend(loc='upper right', fontsize=8)\n",
-    "ax1.set_title(\"[\" + data_name + \"]  \");     \n",
+    "ax1.set_title(\"[\" + data_name + \"]\");     \n",
     "\n",
     "xlim=[f_min, f_max];         ax1.set_xlim(xlim); \n",
     "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
@@ -1127,7 +1125,7 @@
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\"); pp1.set_label(spec.str_unit)\n",
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\"); pp2.set_label(spec.str_unit)\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\"); pp3.set_label(spec.str_unit)\n",
-    "ax1.set_title(\"[\" + data_name + \"]  \");     \n",
+    "ax1.set_title(\"[\" + data_name + \"]\");     \n",
     "\n",
     "print( \"(\", num_1d[0],\")\", Epoch_1d[0], \"-\", \"(\", num_1d[-1],\")\", Epoch_1d[-1] )\n",
     "if time_mode == 1:\n",
@@ -1224,7 +1222,7 @@
     "    if f_mode == 0:\n",
     "        f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "\n",
-    "    fig = plt.figure(figsize=(14, 11))\n",
+    "    fig = plt.figure(figsize=(16, 11))\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "    ax1.plot(freq_1d,     spec.EE[n_sweep1],              ':r', linewidth=.9, label='EE(SID-2)')\n",
@@ -1284,7 +1282,7 @@
     "    if f_mode == 0:\n",
     "        f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
-    "    fig = plt.figure(figsize=(14, 11))\n",
+    "    fig = plt.figure(figsize=(16, 11))\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "    ax1.plot(freq_1d,     spec.EE[n_sweep1],         ':r', linewidth=.9, label='EE(SID-2) 1st')\n",
@@ -1325,8 +1323,7 @@
     "    date1 = Epoch_1d[n_sweep1];  date1 = date1.strftime('1st: %Y/%m/%d %R:%S   ')\n",
     "    date2 = Epoch_1d[n_sweep2];  date2 = date2.strftime('Mid: %Y/%m/%d %R:%S   ')\n",
     "    date3 = Epoch_1d[n_sweep3];  date3 = date3.strftime('Fin: %Y/%m/%d %R:%S')\n",
-    "    title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
-    "    ax1.set_title(title_date)\n",
+    "    title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3;      ax1.set_title(title_date)\n",
     "    #\n",
     "    ax1.legend(loc='upper right', fontsize=8);  \n",
     "    ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);   ax4.legend(loc='upper right', fontsize=8)\n",
@@ -1357,7 +1354,7 @@
     "    if f_mode == 0:\n",
     "        f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
-    "    fig = plt.figure(figsize=(14, 11))\n",
+    "    fig = plt.figure(figsize=(16, 11))\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "    ax1.plot(freq_1d,     spec.EE[n_sweep1],             ':r', linewidth=.9, label='EE(SID-2) 1st')\n",
@@ -1426,7 +1423,7 @@
     "    if f_mode == 0:\n",
     "        f_min = f_mode_min;  f_max = f_mode_max;  \n",
     "\n",
-    "    fig = plt.figure(figsize=(14, 11))\n",
+    "    fig = plt.figure(figsize=(16, 11))\n",
     "    ax1 = fig.add_subplot(1, 1, 1)\n",
     "    ax1.plot(freq_1d_sid, spec_sid_EE_msk[n_sweep1],     ':r', linewidth=.9, label='EE(SID-3) med 1st')\n",
     "    ax1.plot(freq_1d_sid, spec_sid_EE_msk[n_sweep2],     ':g', linewidth=.5, label='EE(SID-3) med mid')\n",
@@ -1439,7 +1436,7 @@
     "    if f_mode == 1:\n",
     "        ax1.set_xscale('log')\n",
     "    ax1.set_ylabel('EE '+spec.str_unit);  ax1.set_xlabel('Frequency [kHz]');  ax1.legend(loc='upper right', fontsize=8)\n",
-    "    ax1.set_title(\"[\" + data_name + \"]  \");     \n",
+    "    ax1.set_title(\"[\" + data_name + \"]\");     \n",
     "\n",
     "    xlim=[f_min, f_max];         ax1.set_xlim(xlim); \n",
     "    ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
@@ -1472,7 +1469,7 @@
     "    p_min = p_min1;  p_max = p_max1\n",
     "    f_min = 0;       f_max = 5000\n",
     "\n",
-    "    fig = plt.figure(figsize=(14, 11))\n",
+    "    fig = plt.figure(figsize=(16, 11))\n",
     "    ax1 = fig.add_subplot(9, 1, 1); ax2 = fig.add_subplot(9, 1, 2); ax3 = fig.add_subplot(9, 1, 3); ax4 = fig.add_subplot(9, 1, 4); ax5 = fig.add_subplot(9, 1, 5)\n",
     "    ax6 = fig.add_subplot(9, 1, 6); ax7 = fig.add_subplot(9, 1, 7); ax8 = fig.add_subplot(9, 1, 8); ax9 = fig.add_subplot(9, 1, 9)\n",
     "\n",
@@ -1713,7 +1710,7 @@
     "    p_min = p_min1;          p_max = p_max1\n",
     "    f_min = freq_1d_sid[0];  f_max = freq_1d_sid[-1]\n",
     "\n",
-    "    fig = plt.figure(figsize=(14, 11))\n",
+    "    fig = plt.figure(figsize=(16, 11))\n",
     "    ax1 = fig.add_subplot(3, 1, 1);  ax3 = fig.add_subplot(3, 1, 2);  ax4 = fig.add_subplot(3, 1, 3)\n",
     "\n",
     "    ax1.plot(freq_1d, spec.EE[n_sweep1], ':r', linewidth=.9, label='EE(SID-2) 1st')\n",
@@ -1846,7 +1843,7 @@
     "    if f_mode == 0:\n",
     "        f_min = f_min0;  f_max = 5000\n",
     "\n",
-    "    fig = plt.figure(figsize=(14, 11))\n",
+    "    fig = plt.figure(figsize=(16, 11))\n",
     "    ax1 = fig.add_subplot(3, 1, 1);  ax3 = fig.add_subplot(3, 1, 2);  ax4 = fig.add_subplot(3, 1, 3)\n",
     "    ax1.plot(freq_1d, spec.EE[n_sweep1], ':r', linewidth=.2, label='EE(SID-2) 1st')\n",
     "    ax1.plot(freq_1d, spec.EE[n_sweep2], ':g', linewidth=.2, label='EE(SID-2) mid')\n",
@@ -1871,8 +1868,7 @@
     "    date1 = Epoch_1d[n_sweep1];  date1 = date1.strftime('First: %Y/%m/%d %R:%S   ')\n",
     "    date2 = Epoch_1d[n_sweep2];  date2 = date2.strftime('Mid: %Y/%m/%d %R:%S   ')\n",
     "    date3 = Epoch_1d[n_sweep3];  date3 = date3.strftime('Last: %Y/%m/%d %R:%S')\n",
-    "    title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
-    "    ax1.set_title(title_date)\n",
+    "    title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "    #\n",
     "    ax1.legend(loc='upper right', fontsize=8);  \n",
     "    ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);   ax4.legend(loc='upper right', fontsize=8)\n",
