--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# *** Plot dump ***\n",
-    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL set ***\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(5, 1, 1);  ax2 = fig.add_subplot(5, 1, 2);  ax3 = fig.add_subplot(5, 1, 3)\n",
     "ax4 = fig.add_subplot(5, 1, 4);  ax5 = fig.add_subplot(5, 1, 5)\n",
     "\n",
@@ -215,7 +215,7 @@
     "ax5.set_ylabel('Date-Time')\n",
     "ax5.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF PSSR3-Surv (SID-7)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF PSSR3-Surv (SID-7)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "# xlim=[-.5, len(np.ravel(data.auto_corr)) -.5]; print(xlim); ax1.set_xlim(xlim)\n",
     "# xlim=[-.5, len(np.ravel(data.epoch))     -.5]; print(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
@@ -245,7 +245,7 @@
    "source": [
     "n_sweep = 0\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(4, 4, 1);   ax2 = fig.add_subplot(4, 4, 2);   ax3 = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5 = fig.add_subplot(4, 4, 5);   ax6 = fig.add_subplot(4, 4, 6);   ax7 = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9 = fig.add_subplot(4, 4, 9);   ax10 = fig.add_subplot(4, 4, 10); ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -298,7 +298,7 @@
     "ax15.plot(data.time[n_sweep][0][:], data.auto_corr[n_sweep][44][:], '-b', linewidth=.5, label='44')\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);   ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
@@ -332,7 +332,7 @@
     "n_sweep = n_time0-1\n",
     "print(\"[mid]\", n_sweep, \"in total:\", n_time0)\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(4, 4, 1);   ax2 = fig.add_subplot(4, 4, 2);   ax3 = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5 = fig.add_subplot(4, 4, 5);   ax6 = fig.add_subplot(4, 4, 6);   ax7 = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9 = fig.add_subplot(4, 4, 9);   ax10 = fig.add_subplot(4, 4, 10); ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -385,7 +385,7 @@
     "ax15.plot(data.time[n_sweep][0][:], data.auto_corr[n_sweep][44][:], '-b', linewidth=.5, label='44')\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);   ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
@@ -419,7 +419,7 @@
    "source": [
     "n_sweep = n_time0 - 1\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(4, 4, 1);   ax2 = fig.add_subplot(4, 4, 2);   ax3 = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5 = fig.add_subplot(4, 4, 5);   ax6 = fig.add_subplot(4, 4, 6);   ax7 = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9 = fig.add_subplot(4, 4, 9);   ax10 = fig.add_subplot(4, 4, 10); ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -472,7 +472,7 @@
     "ax15.plot(data.time[n_sweep][0][:], data.auto_corr[n_sweep][44][:], '-b', linewidth=.5, label='44')\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);   ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
@@ -512,8 +512,8 @@
     "ax1 = fig2d.add_subplot(1, 1, 1); \n",
     "\n",
     "p1 = ax1.pcolormesh(num_1d, data.time[0][0], auto_corr_2d, cmap='bwr')\n",
-    "\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
+    "ax1.set_title(\"[\" + data_name + \"]\")\n",
     "\n",
     "# Plot\n",
     "fig2d.show\n",
