--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/6/30"
+    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/7/7"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "# *** Frenquency in Linear ***\n",
     "f_mode_min = 80;  f_mode_max = 2068     # 80 - 2068 : as same as SID-4/20\n",
@@ -331,7 +331,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
     "print(\"[Power]\")\n",
     "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5))\n",
@@ -1073,19 +1072,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25621355",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Complex:\", data.complex)\n",
-    "print(\"CAL_sig:\", data.cal_signal)\n",
-    "print(\"POL_SW :\", data.Pol_sep_SW)\n",
-    "print(\"POL_thr:\", data.Pol_sep_thres)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "40a14d41",
    "metadata": {},
@@ -1377,9 +1363,7 @@
    "outputs": [],
    "source": [
     "p_min = p_min0;  p_max = p_max0\n",
-    "# p_min = -14.5;     p_max = -13.5\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "f_min = 100;     f_max = 2000\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "num_1d = np.arange(n_time0)\n",
@@ -1631,9 +1615,7 @@
    "outputs": [],
    "source": [
     "p_min = p_min0;  p_max = p_max0\n",
-    "#p_min = -14;     p_max = -13\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "# f_min = 300;     f_max = 3000\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
@@ -2410,7 +2392,6 @@
    "source": [
     "# FT & Cir\n",
     "p_min = p_min0;  p_max = p_max0\n",
-    "p_min = -15.5;     p_max = -12\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 80;      f_max = 1000\n",
     "if f_mode == 0:\n",
@@ -2624,7 +2605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_min = p_min0+1.5;  p_max = p_max0\n",
+    "p_min = p_min0;  p_max = p_max0\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
