Status read -- updated

--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -81,8 +81,8 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL set ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background   1: CAL     2: all\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -149,8 +149,8 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid23.hf_sid23_read(cdf, RPWI_FSW_version)\n",
+    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid23.hf_sid23_read(cdf) #, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                  print(data.Eu_i.shape)\n",
     "    else:\n",
@@ -418,6 +418,7 @@
     "ax3.plot(np.ravel(wave.Ew_i[:][:]), '-b', linewidth=.5, label='Ew_i'); ax3.plot(np.ravel(wave.Ew_q[:][:]), ':r', linewidth=.1, label='Ew_q')\n",
     "ax4.plot(np.ravel(data.time[:]), linewidth=.5, label='time')\n",
     "ax5.plot(np.ravel(data.freq_center[:]), '.')\n",
+    "ax5.plot(np.ravel(data.HF_QF*1000),   '.r', label='HF_QF')\n",
     "ax6.plot(np.ravel(data.epoch[:]), '.')\n",
     "\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);  ax2.set_ylabel('Ev '+wave.str_unit);    ax3.set_ylabel('Ew '+wave.str_unit);  \n",
