--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/7/7"
+    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/10/3"
    ]
   },
   {
@@ -77,11 +77,11 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
-    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
+    "f_mode    = 0                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "# *** Frenquency in Linear ***\n",
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "E_min = '2024-08-20 00:00:00';  t_min0 = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
-    "E_max = '2024-08-24 00:00:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
+    "E_max = '2024-08-21 00:00:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
     "t_min0 = 0;  t_max0 = 0"
    ]
   },
@@ -162,8 +162,8 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid3.hf_sid3_read(cdf, RPWI_FSW_version)\n",
+    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid3.hf_sid3_read(cdf)\n",
     "    if i==0:\n",
     "        data = data1;                                print(data.EuEu.shape)\n",
     "    else:\n",
@@ -232,7 +232,9 @@
     "    N_component = 21;             print(\"       ==> Component:\", N_component)\n",
     "#\n",
     "print(\"         BG_downlink:\", data.BG_downlink[0])\n",
-    "print(\"       RFI_rejection:\", data.RFI_rejection[0])"
+    "print(\"       RFI_rejection:\", data.RFI_rejection[0])\n",
+    "print(\"          decimation:\", data.decimation[0],     juice_cdf._sample_rate(data.decimation[0])*0.75\n",
+    ")"
    ]
   },
   {
@@ -267,7 +269,13 @@
    "outputs": [],
    "source": [
     "spec = copy.deepcopy(data)\n",
+    "\n",
     "spec = juice_cal.spec_cal(spec,   3, unit_mode, band_mode, T_HF, T_RWI)     # CAL\n",
+    "# ****TMP****\n",
+    "#spec.cf  = 1.0\n",
+    "#spec.str_unit = juice_cal.power_label(unit_mode, band_mode)\n",
+    "# ****TMP****\n",
+    "\n",
     "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw"
    ]
   },
@@ -299,7 +307,7 @@
    "source": [
     "spec = juice_spec.hf_getspec_angle    (spec, 3)     # Coherency & ange\n",
     "spec = juice_spec.hf_getspec_stokes   (spec, 3)     # Stokes and Polarization Parameters \n",
-    "spec = juice_spec.hf_getspec_stokes_3d(spec)        # 3D Stokes and Polarization Parameters"
+    "# spec = juice_spec.hf_getspec_stokes_3d(spec)        # 3D Stokes and Polarization Parameters"
    ]
   },
   {
@@ -482,6 +490,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24c49a95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.ADC_ovrflw "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9480250b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.HF_QF"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6cc526e7",
    "metadata": {},
@@ -516,8 +544,9 @@
     "ax8.plot(np.ravel(data.T_HF_FPGA),      ':r', label='T (HK-FPGA)')\n",
     "ax8.plot(np.ravel(data.T_RWI_CH1),      ':b', label='T (RWI1)')\n",
     "ax8.plot(np.ravel(data.T_RWI_CH2),      ':g', label='T (RWI2)')\n",
-    "ax8.plot(np.ravel(data.cal_signal*10),      '-k', label='CAL')\n",
-    "ax8.plot(np.ravel(data.complex*10+4),       '_r', label='comp')\n",
+    "# ax8.plot(np.ravel(data.cal_signal*10),  '-k', label='CAL')\n",
+    "ax8.plot(np.ravel(data.HF_QF*5),        '.r', label='HF_QF*5')\n",
+    "ax8.plot(np.ravel(data.complex*10+4),   '_r', label='comp')\n",
     "ax8.plot(np.ravel(data.RFI_rejection*10+2), '_b', label='RFI')\n",
     "ax9.plot(np.ravel(data.epoch),              '.')\n",
     "if comp_mode > 0:    # Matrix\n",
@@ -546,7 +575,7 @@
     "    ax5.set_ylabel('Deg. Cir Pol.');  ax6.set_ylabel('Lin Deg.'); \n",
     "ax7.set_ylabel('frequency [kHz]');    ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time');  ax9.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF Full (SID-3)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF Full (SID-3)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);     ax7.legend(loc='upper right', fontsize=8); ax8.legend(loc='upper right', fontsize=8)\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
@@ -556,7 +585,7 @@
     "if comp_mode > 0:    # Matrix\n",
     "    ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim)\n",
     "xlim=[-.5, len(np.ravel(data.epoch))-.5]; print(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
-    "ylim=[10**p_min, 10**p_max];                ax1.set_ylim(ylim)\n",
+    "ylim=[10**p_min, 10**p_max/4];                ax1.set_ylim(ylim)\n",
     "if comp_mode > 0:    # Matrix\n",
     "    # ylim=[-10**p_max, 10**p_max];           ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
@@ -568,6 +597,14 @@
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
     "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8822d951",
+   "metadata": {},
+   "source": [
+    "### NC"
    ]
   },
   {
@@ -644,6 +681,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61480bb8",
+   "metadata": {},
+   "source": [
+    "### RC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1c09b3fe",
@@ -714,6 +759,14 @@
     "    if dump_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_raw_RC.png'\n",
     "        fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f97ba6d4",
+   "metadata": {},
+   "source": [
+    "### LC"
    ]
   },
   {
@@ -849,7 +902,7 @@
     "    ax5.set_ylabel('Deg. Cir Pol.');  ax6.set_ylabel('Lin Deg.')\n",
     "ax7.set_ylabel('frequency [kHz]');    ax7.set_xlabel(data.epoch[n_time].strftime('%Y/%m/%d %R:%S') + '  [in ' + str_date + ']')\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF Full (SID-3)]  ' + data_name;  ax1.set_title(title_label)\n",
+    "title_label = '[JUICE/RPWI HF Full (SID-3)]\\n' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);     ax7.legend(loc='upper right', fontsize=8); \n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
@@ -1272,7 +1325,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "if comp_mode > 0:\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); ax4.legend(loc='upper right', fontsize=8) \n",
@@ -1303,23 +1356,23 @@
    "source": [
     "p_min = p_min0;  p_max = p_max0\n",
     "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
-    "# n0 = 64;  n1 = 65;   n2 = 66\n",
+    "# n0 = 1002;  n1 = 1003;   n2 = 1004\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "# f_min = 80;       f_max = 2068\n",
+    "# f_min = 100;     f_max = 500\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
-    "#ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=0.5, label='EuEu_med')\n",
-    "#ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=0.5, label='EvEv_med')\n",
-    "#ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=0.5, label='EwEw_med')\n",
-    "ax1.plot(freq_1d, spec.EE[n0],   '-.y',  linewidth=0.5, label='uu init')\n",
+    "ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=0.5, label='EuEu_med')\n",
+    "ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=0.5, label='EvEv_med')\n",
+    "ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=0.5, label='EwEw_med')\n",
+    "#ax1.plot(freq_1d, spec.EE[n0],   '-.y',  linewidth=0.5, label='uu init')\n",
     "ax1.plot(freq_1d, spec.EuEu[n0], '-.r',  linewidth=0.5, label='uu init')\n",
     "ax1.plot(freq_1d, spec.EvEv[n0], '-.g',  linewidth=0.5, label='vv init')\n",
     "ax1.plot(freq_1d, spec.EwEw[n0], '-.b',  linewidth=0.5, label='ww init')\n",
-    "ax1.plot(freq_1d, spec.EE[n1],   '-y', linewidth=2.0, label='uu half')\n",
+    "#ax1.plot(freq_1d, spec.EE[n1],   '-y', linewidth=2.0, label='uu half')\n",
     "ax1.plot(freq_1d, spec.EuEu[n1], '-r', linewidth=2.0, label='uu half')\n",
     "ax1.plot(freq_1d, spec.EvEv[n1], '-g', linewidth=2.0, label='vv half')\n",
     "ax1.plot(freq_1d, spec.EwEw[n1], '-b', linewidth=2.0, label='ww half')\n",
-    "ax1.plot(freq_1d, spec.EE[n2],   ':y',  linewidth=2.0, label='uu end')\n",
+    "#ax1.plot(freq_1d, spec.EE[n2],   ':y',  linewidth=2.0, label='uu end')\n",
     "ax1.plot(freq_1d, spec.EuEu[n2], ':r',  linewidth=2.0, label='uu end')\n",
     "ax1.plot(freq_1d, spec.EvEv[n2], ':g',  linewidth=2.0, label='vv end')\n",
     "ax1.plot(freq_1d, spec.EwEw[n2], ':b',  linewidth=2.0, label='ww end')\n",
@@ -1331,7 +1384,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]\\n\" + date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[f_min, f_max]\n",
@@ -1387,6 +1440,7 @@
     "    p2 = ax2.pcolormesh(num_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p3 = ax3.pcolormesh(num_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p4 = ax4.plot(np.ravel(data.epoch[:]), '.')\n",
+    "    # p4 = ax4.plot(np.ravel(data.HF_QF*5),        '.r', label='HF_QF*5')\n",
     "    pp3 = fig2d.colorbar(p3, ax=ax4, orientation=\"vertical\"); pp3.set_label(spec.str_unit)\n",
     "else:\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
@@ -1405,8 +1459,8 @@
     "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "    else:\n",
     "        xlim=[t_min0, t_max0]\n",
-    "    #E_min = '2024-08-21 04:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    #E_max = '2024-08-21 19:00:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    #E_min = '2024-08-20 20:30:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    #E_max = '2024-08-20 22:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
@@ -2575,7 +2629,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(\"[\" + data_name + \"]  \" + title_date)\n",
+    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3;  ax1.set_title(\"[\" + data_name + \"]\\n\" + title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[f_min, f_max];          ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
@@ -2729,6 +2783,16 @@
     "        writer.writerow([ i, data.frequency[0][i], data.freq_width[0][i], data.freq_step[0][i]])\n",
     "print(freq_1d.shape[0], data.frequency.shape)\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4208f37c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec.freq_w[n_time//2]"
    ]
   }
  ],
