--- a/JUICE-CDF-HF-SID6-22_sample.ipynb
+++ b/JUICE-CDF-HF-SID6-22_sample.ipynb
@@ -120,8 +120,8 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid22.hf_sid22_read(cdf, sid, RPWI_FSW_version)\n",
+    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid22.hf_sid22_read(cdf, sid) #, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                       print(\"sid\", sid, data.auto_corr.shape)\n",
     "    else:\n",
@@ -480,7 +480,7 @@
     "\n",
     "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1); \n",
-    "ax1.set_title(\"[\" + data_name + \"]\")",
+    "ax1.set_title(\"[\" + data_name + \"]\")\n",
     "p1 = ax1.pcolormesh(num_x, num_y, auto_corr_2d, cmap='bwr')\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
     "\n",
