--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -157,8 +157,8 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid20.hf_sid20_read(cdf, sid, RPWI_FSW_version)\n",
+    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid20.hf_sid20_read(cdf, sid) #, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                       print(\"sid\", sid, data.EuEu.shape)\n",
     "    else:\n",
@@ -247,7 +247,7 @@
     "    for i in range(n_time1-1):\n",
     "        if spec.scet[i+1]-spec.scet[i] > 60:\n",
     "            print(\"[gap]\", i, spec.epoch[i], i+1, spec.epoch[i+1])\n",
-    "            juice_sid20.spec_nan(spec, i);  juice_sid20.spec_nan(spec, i+1)"
+    "            juice_sid20.spec_nan(spec, i, sid);  juice_sid20.spec_nan(spec, i+1, sid)"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "source": [
     "spec = juice_spec.hf_getspec_angle    (spec, sid)   # Coherency & ange\n",
     "spec = juice_spec.hf_getspec_stokes   (spec, sid)   # Stokes and Polarization Parameters \n",
-    "spec = juice_spec.hf_getspec_stokes_3d(spec)        # 3D Stokes and Polarization Parameters"
+    "# spec = juice_spec.hf_getspec_stokes_3d(spec)        # 3D Stokes and Polarization Parameters"
    ]
   },
   {
