--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -142,8 +142,8 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid5.hf_sid5_read(cdf, RPWI_FSW_version)\n",
+    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid5.hf_sid5_read(cdf) #, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                               print(data.EE.shape)\n",
     "    else:\n",
